--- a/Documents/Report/References.bib
+++ b/Documents/Report/References.bib
@@ -1,3 +1,15 @@
+@article{clopper1934,
+  title={{The use of confidence or fiducial limits illustrated in the case of the binomial}},
+  author={Clopper, Charles J and Pearson, Egon S},
+  journal={Biometrika},
+  volume={26},
+  number={4},
+  pages={404--413},
+  year={1934},
+  publisher={JSTOR}
+}
+
+
 @book{agresti2002,
   title={{An Introduction to Categorical Data Analysis}},
   author={Agresti, Alan},
